[gd_scene load_steps=2 format=3 uid="uid://bjhedtnkrakw6"]

[ext_resource type="Script" uid="uid://dpv3psu230nrw" path="res://scripts/main_ui/server_conection_button.gd" id="1_x8df4"]

[node name="server_connection_button" type="BoxContainer" groups=["server_connection"]]
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true
script = ExtResource("1_x8df4")

[node name="server_connect_point" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "SERVER NAME"
alignment = 0

[node name="server_input" type="BoxContainer" parent="."]
layout_mode = 2

[node name="server_ip" type="LineEdit" parent="server_input"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "server ip"
editable = false

[node name="server_port" type="LineEdit" parent="server_input"]
layout_mode = 2
placeholder_text = "port"
editable = false
virtual_keyboard_type = 2

[connection signal="pressed" from="server_connect_point" to="." method="selected"]
